--- a/src/css/components/Book.css
+++ b/src/css/components/Book.css
@@ -7,14 +7,15 @@
   display: flex;
   flex-direction: column;
 }
-.book__img--wrapper img {
+.book__img--wrapper a, .book__img--wrapper img {
+  display: block;
   height: 100%;
   width: 100%;
   object-fit: contain;
   object-position: left bottom;
   transition: transform 300ms ease;
 }
-.book__img--wrapper img:hover {
+.book__img--wrapper a:hover, .book__img--wrapper img:hover {
   transform: scale(1.03);
 }
 .book__info {
@@ -78,8 +79,8 @@
   .book__skeleton--img {
     height: 55vw;
   }
-  .book__img {
-    object-position: bottom;
+  .book img {
+    object-position: center bottom;
   }
   .book__info {
     text-align: center;
