--- a/src/scss/pages/Home/Landing.scss
+++ b/src/scss/pages/Home/Landing.scss
@@ -14,18 +14,18 @@
     &__text {
       text-align: center;
     }
-    
+
     &__title {
       font-size: 48px;
-      color: #7342D6;
+      color: #7342d6;
       margin-bottom: 24px;
     }
-    
+
     &__sub-title {
       font-size: 24px;
       margin-bottom: 32px;
     }
-    
+
     &__img {
       margin-top: 32px;
       max-height: 300px;
@@ -33,26 +33,26 @@
       object-fit: contain;
     }
   }
-}
 
-@media screen and (max-width: 768px) {
-  .header__title {
-    font-size: 40px;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .header__img {
-    height: 35vh;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .header__title {
-    font-size: 36px;
+  @media screen and (max-width: 768px) {
+    .header__title {
+      font-size: 40px;
+    }
   }
 
-  .header__sub-title {
-    font-size: 20px;
+  @media screen and (max-width: 576px) {
+    .header__img {
+      height: 35vh;
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    .header__title {
+      font-size: 36px;
+    }
+
+    .header__sub-title {
+      font-size: 20px;
+    }
   }
 }
