--- a/src/scss/pages/Home/WhyChooseLibrary.scss
+++ b/src/scss/pages/Home/WhyChooseLibrary.scss
@@ -49,7 +49,9 @@
 @media screen and (max-width: 480px) {
   .highlights {
     column-gap: 16px;
-
+  }
+  
+  .highlight {
     &__title {
       font-size: 18px;
     }
