--- a/src/css/pages/BrowseBooks/BrowseBooks.css
+++ b/src/css/pages/BrowseBooks/BrowseBooks.css
@@ -2,13 +2,13 @@
   padding-top: 24px;
   padding-bottom: 64px;
 }
-#browse-books header {
+#browse-books .books__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 40px;
 }
-#browse-books header .books__header--title {
+#browse-books .books__header--title {
   font-size: 40px;
 }
 #browse-books select {
@@ -21,7 +21,6 @@
   outline: none;
   padding: 0 16px;
 }
-
 @media screen and (max-width: 768px) {
   #browse-books .container {
     padding-top: 12px;
@@ -34,5 +33,10 @@
     padding: 0 8px;
     line-height: 36px;
     height: 36px;
+  }
+}
+@media screen and (max-width: 480px) {
+  #browse-books .books__header--title {
+    font-size: 1.75rem;
   }
 }
