--- a/src/css/pages/Cart/Cart.css
+++ b/src/css/pages/Cart/Cart.css
@@ -15,6 +15,12 @@
   font-size: 1.1rem;
   padding: 12px 16px;
 }
+.cart__header .price {
+  text-align: end;
+}
+.cart__header .quantity {
+  text-align: center;
+}
 
 .cart__contents {
   flex-grow: 1;
@@ -57,15 +63,15 @@
   }
 }
 @media screen and (max-width: 576px) {
-  .cart__header {
-    grid-template-columns: 2fr 3fr 1fr;
+  #cart h2 {
+    font-size: 28px;
   }
 }
 .cart-item {
   padding: 24px 0;
   border-bottom: 1px solid gray;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 2fr 1.25fr 2fr;
 }
 .cart-item__img {
   grid-column: 2/3;
@@ -84,7 +90,7 @@
   font-size: 1.25rem;
 }
 .cart-item__title.mobile {
-  margin-bottom: 16px;
+  margin-bottom: 12px;
   text-align: center;
 }
 .cart-item__price {
@@ -116,10 +122,12 @@
   font-weight: bold;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 768px) {
   .cart-item {
-    grid-template-columns: 2fr 3fr 1fr;
+    grid-template-columns: 1fr 1.5fr 1fr;
   }
+}
+@media screen and (max-width: 576px) {
   .cart-item__img {
     width: 75%;
     max-width: 160px;
@@ -129,6 +137,9 @@
   }
   .cart-item__total-price {
     padding-right: 0;
+  }
+  .cart-item__title.mobile {
+    margin-bottom: 8px;
   }
   .cart-item .current-quantity {
     width: 40px;
@@ -140,7 +151,7 @@
 }
 @media screen and (max-width: 480px) {
   .cart-item__title {
-    font-size: 18px;
+    font-size: 16px;
   }
 }
 .totals {
