apply vertical padding to section rather than the container inside it

--- a/src/css/components/Book.css
+++ b/src/css/components/Book.css
@@ -74,6 +74,11 @@
     height: 25vw;
   }
 }
+@media screen and (max-width: 768px) {
+  .book__title {
+    font-size: 16px;
+  }
+}
 @media screen and (max-width: 576px) {
   .book__img--wrapper,
   .book-skeleton__img {
