--- a/src/css/pages/BookInfo/BookInfo.css
+++ b/src/css/pages/BookInfo/BookInfo.css
@@ -1,57 +1,53 @@
-.home-links {
+#go-to-browse {
+  padding-bottom: 20px;
+}
+#go-to-browse .home-links {
   display: flex;
   align-items: center;
 }
-.home-links .home-link {
+#go-to-browse .home-links .home-link {
   font-size: 1.5rem;
 }
-.home-links .home-link:first-child {
+#go-to-browse .home-links .home-link:first-child {
   margin-right: 12px;
 }
 
-#active-book > .container,
-#recc-books > .container {
-  padding-top: 24px;
-  padding-bottom: 60px;
-}
-
-.book-selected {
-  margin-top: 24px;
+#active-book .book-selected {
   display: flex;
   align-items: flex-start;
 }
-.book-selected img {
+#active-book img {
   border-radius: 12px;
   object-fit: contain;
   width: 33.3333333333%;
   min-width: 250px;
 }
-.book-selected .mobile-img-wrapper {
+#active-book .mobile-img-wrapper {
   display: none;
 }
-.book-selected .info {
+#active-book .info {
   padding-left: 48px;
   text-align: left;
 }
-.book-selected .info .title {
+#active-book .info .title {
   font-size: 1.75rem;
 }
-.book-selected .info .summary {
+#active-book .info .summary {
   margin-top: 20px;
 }
-.book-selected .info .summary .title {
+#active-book .info .summary .title {
   font-size: 20px;
 }
-.book-selected .info .summary .para {
+#active-book .info .summary .para {
   margin-top: 12px;
 }
-.book-selected .btn {
+#active-book .add-to-cart-btn {
   transition: background-color 500ms ease;
   transition-delay: 200ms;
   margin-top: 20px;
   position: relative;
 }
-.book-selected .btn::after {
+#active-book .add-to-cart-btn::after {
   content: "";
   font-size: 20px;
   position: absolute;
@@ -66,72 +62,75 @@
   background-position: center center;
   background-size: contain;
 }
-.book-selected .btn.confirm-active {
+#active-book .add-to-cart-btn.confirm-active {
   background-color: #357266;
   transition: background-color 300ms ease;
 }
-.book-selected .btn.confirm-active::after {
+#active-book .add-to-cart-btn.confirm-active::after {
   opacity: 1;
   transform: translateY(-50%);
   transition: opacity 300ms ease-in-out, transform 200ms ease-in-out;
   transition-delay: 100ms;
 }
-
-.recc-books__header {
-  margin-bottom: 32px;
-  font-size: 2rem;
-  text-align: center;
-}
-
 @media screen and (max-width: 768px) {
-  #active-book > .container,
-  #recc-books > .container {
-    padding-top: 12px;
+  #active-book {
     padding-bottom: 40px;
   }
-  .book-selected .info {
+  #active-book .book-selected .info {
     padding-left: 24px;
   }
 }
 @media screen and (max-width: 576px) {
-  .book-selected {
+  #active-book .book-selected {
     flex-direction: column;
     align-items: center;
     gap: 32px;
   }
-  .book-selected .info {
+  #active-book .book-selected .info {
     padding-left: 0;
   }
-  .book-selected .info .title {
-    margin-top: 24px;
-  }
-  .book-selected .rating-and-price {
+  #active-book .book-selected .rating-and-price {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  .book-selected .desktop-img {
+  #active-book .book-selected .desktop-img {
     display: none;
   }
-  .book-selected .mobile-img-wrapper {
+  #active-book .book-selected .mobile-img-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 20px;
   }
-  .book-selected .btn-wrapper::after {
+  #active-book .book-selected .btn-wrapper::after {
     width: 28px;
     height: 28px;
   }
-  .book-selected .btn-wrapper .btn {
+  #active-book .book-selected .btn-wrapper .btn {
     padding: 8px 20px;
   }
-  .recc-books__header {
+}
+
+#recc-books {
+  padding-top: 48px;
+  padding-bottom: 60px;
+}
+#recc-books .recc-books__header {
+  margin-bottom: 32px;
+  font-size: 2rem;
+  text-align: center;
+}
+@media screen and (max-width: 576px) {
+  #recc-books {
+    padding-top: 24px;
+  }
+  #recc-books .recc-books__header {
     margin-bottom: 24px;
   }
 }
 @media screen and (max-width: 480px) {
-  .recc-books__header {
+  #recc-books .recc-books__header {
     margin-bottom: 20px;
   }
 }
