--- a/src/css/pages/BrowseBooks/BrowseBooks.css
+++ b/src/css/pages/BrowseBooks/BrowseBooks.css
@@ -1,17 +1,16 @@
-#browse-books .container {
-  padding-top: 24px;
-  padding-bottom: 64px;
+header {
+  padding-top: 20px;
+  padding-bottom: 24px;
 }
-#browse-books .books__header {
+header .books__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 40px;
 }
-#browse-books .books__header--title {
+header .books__header--title {
   font-size: 40px;
 }
-#browse-books select {
+header select {
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid #dcdfe6;
@@ -22,21 +21,31 @@
   padding: 0 16px;
 }
 @media screen and (max-width: 768px) {
-  #browse-books .container {
-    padding-top: 12px;
-    padding-bottom: 40px;
+  header {
+    padding-top: 0;
+    padding-bottom: 12px;
   }
-  #browse-books .books__header--title {
+  header .books__header--title {
     font-size: 2rem;
   }
-  #browse-books select {
+  header select {
     padding: 0 8px;
     line-height: 36px;
     height: 36px;
   }
 }
 @media screen and (max-width: 480px) {
-  #browse-books .books__header--title {
+  header .books__header--title {
     font-size: 1.75rem;
+  }
+}
+
+#browse-books {
+  padding-bottom: 64px;
+}
+@media screen and (max-width: 768px) {
+  #browse-books {
+    padding-top: 8px;
+    padding-bottom: 40px;
   }
 }
