--- a/src/scss/pages/BrowseBooks/BrowseBooks.scss
+++ b/src/scss/pages/BrowseBooks/BrowseBooks.scss
@@ -1,14 +1,11 @@
-#browse-books {
-  .container {
-    padding-top: 24px;
-    padding-bottom: 64px;
-  }
+header {
+  padding-top: 20px;
+  padding-bottom: 24px;
 
   .books__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 40px;
 
     &--title {
       font-size: 40px;
@@ -27,15 +24,13 @@
   }
 
   @media screen and (max-width: 768px) {
-    .container {
-      padding-top: 12px;
-      padding-bottom: 40px;
-    }
-  
+    padding-top: 0;
+    padding-bottom: 12px;
+
     .books__header--title {
-      font-size: 2rem;
-    }
-  
+        font-size: 2rem;
+      }
+
     select {
       padding: 0 8px;
       line-height: 36px;
@@ -50,3 +45,11 @@
   }
 }
 
+#browse-books {
+  padding-bottom: 64px;
+
+  @media screen and (max-width: 768px) {
+    padding-top: 8px;
+    padding-bottom: 40px;
+  }
+}
