--- a/src/scss/pages/Home/Home.scss
+++ b/src/scss/pages/Home/Home.scss
@@ -1,22 +1,20 @@
-#home section,
-#landing {
-  > .container {
-    padding-top: 48px;
-    padding-bottom: 48px;
+#highlights,
+#featured,
+#discounted,
+#explore {
+  padding-top: 48px;
+  padding-bottom: 48px;
+
+  .section__title {
+    margin-bottom: 40px;
   }
-}
 
-#explore > .container {
-  padding-bottom: 96px;
-}
-
-#home .section__title {
-  margin-bottom: 40px;
-}
-
-@media screen and (max-width: 576px) {
-  section > .container {
+  @media screen and (max-width: 576px) {
     padding-top: 32px;
     padding-bottom: 32px;
   }
+}
+
+#explore {
+  padding-bottom: 96px;
 }
