simplify cart scss

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -103,11 +103,19 @@ button {
   opacity: 0.9;
 }
 
-.section__title {
-  font-size: 2rem;
-  text-align: center;
-}
-
 .text--purple {
   color: #7342d6;
+}
+
+.mobile {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .desktop {
+    display: none !important;
+  }
+  .mobile {
+    display: block !important;
+  }
 }
