--- a/src/css/pages/Home/Home.css
+++ b/src/css/pages/Home/Home.css
@@ -9,6 +9,8 @@
 #featured .section__title,
 #discounted .section__title,
 #explore .section__title {
+  font-size: 2rem;
+  text-align: center;
   margin-bottom: 40px;
 }
 @media screen and (max-width: 576px) {
