--- a/src/scss/pages/Cart/_cartTotals.scss
+++ b/src/scss/pages/Cart/_cartTotals.scss
@@ -7,10 +7,10 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
-  }
 
-  &__row:nth-child(3) {
-    font-weight: 900;
+    &.final {
+      font-weight: 900;
+    }
   }
   
   .btn {
