--- a/src/scss/pages/BrowseBooks/BrowseBooks.scss
+++ b/src/scss/pages/BrowseBooks/BrowseBooks.scss
@@ -1,55 +1,57 @@
-header {
-  padding-top: 20px;
-  padding-bottom: 24px;
+#browse {
+  header {
+    padding-top: 20px;
+    padding-bottom: 24px;
 
-  .books__header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    .books__header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
-    &--title {
-      font-size: 40px;
+      &--title {
+        font-size: 40px;
+      }
     }
-  }
 
-  select {
-    background-color: #fff;
-    border-radius: 4px;
-    border: 1px solid #dcdfe6;
-    color: #606266;
-    height: 40px;
-    line-height: 40px;
-    outline: none;
-    padding: 0 16px;
-  }
+    select {
+      background-color: #fff;
+      border-radius: 4px;
+      border: 1px solid #dcdfe6;
+      color: #606266;
+      height: 40px;
+      line-height: 40px;
+      outline: none;
+      padding: 0 16px;
+    }
 
-  @media screen and (max-width: 768px) {
-    padding-top: 0;
-    padding-bottom: 12px;
+    @media screen and (max-width: 768px) {
+      padding-top: 0;
+      padding-bottom: 12px;
 
-    .books__header--title {
+      .books__header--title {
         font-size: 2rem;
       }
 
-    select {
-      padding: 0 8px;
-      line-height: 36px;
-      height: 36px;
+      select {
+        padding: 0 8px;
+        line-height: 36px;
+        height: 36px;
+      }
+    }
+
+    @media screen and (max-width: 480px) {
+      .books__header--title {
+        font-size: 1.75rem;
+      }
     }
   }
 
-  @media screen and (max-width: 480px) {
-    .books__header--title {
-      font-size: 1.75rem;
+  #books {
+    padding-bottom: 64px;
+
+    @media screen and (max-width: 768px) {
+      padding-top: 8px;
+      padding-bottom: 40px;
     }
-  }
-}
-
-#browse-books {
-  padding-bottom: 64px;
-
-  @media screen and (max-width: 768px) {
-    padding-top: 8px;
-    padding-bottom: 40px;
   }
 }
