--- a/src/css/pages/Cart/Cart.css
+++ b/src/css/pages/Cart/Cart.css
@@ -10,7 +10,7 @@
     font-size: 28px;
   }
 }
-#cart .cart__section-title .cart__header {
+#cart .cart__header {
   margin-top: 16px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -19,18 +19,18 @@
   font-size: 1.1rem;
   padding: 12px 16px;
 }
-#cart .cart__section-title .cart__header .price {
+#cart .cart__header .price {
   text-align: end;
 }
-#cart .cart__section-title .cart__header .quantity {
+#cart .cart__header .quantity {
   text-align: center;
 }
-#cart .cart__section-title .cart__contents {
+#cart .cart__contents {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
-#cart .cart__section-title .cart__empty {
+#cart .cart__empty {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -39,32 +39,32 @@
   padding-top: 48px;
   padding-bottom: 48px;
 }
-#cart .cart__section-title .cart__empty--message {
+#cart .cart__empty--message {
   margin: 48px 0 24px;
   font-size: 1.25rem;
 }
-#cart .cart__section-title .cart__empty--img {
+#cart .cart__empty--img {
   max-width: 260px;
   width: 75%;
   object-fit: contain;
 }
-#cart .cart__section-title .cart__empty--btn {
+#cart .cart__empty--btn {
   padding-left: 48px;
   padding-right: 48px;
 }
-#cart .cart__section-title .mobile {
+#cart .mobile {
   display: none;
 }
 @media screen and (max-width: 768px) {
-  #cart .cart__section-title .desktop {
+  #cart .desktop {
     display: none !important;
   }
-  #cart .cart__section-title .mobile {
+  #cart .mobile {
     display: block !important;
   }
 }
 @media screen and (max-width: 576px) {
-  #cart .cart__section-title h2 {
+  #cart h2 {
     font-size: 28px;
   }
 }
