--- a/src/css/components/Footer.css
+++ b/src/css/components/Footer.css
@@ -1,29 +1,30 @@
 #footer {
   background-color: #242424;
 }
-#footer > .container {
+#footer .container {
   height: 220px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-#footer > .container .col {
+#footer .col {
   display: flex;
   justify-content: center;
 }
-#footer > .container .col .footer__logo,
-#footer > .container .col .footer__links,
-#footer > .container .col .footer__link,
-#footer > .container .col .footer__copyright {
+#footer .footer__logo,
+#footer .footer__links,
+#footer .footer__link,
+#footer .footer__copyright {
   color: #fff;
 }
-#footer > .container .col .footer__links {
-  margin: 24px 0;
+#footer .footer__links {
+  margin-top: 20px;
+  margin-bottom: 24px;
 }
-#footer > .container .col .footer__link {
+#footer .footer__link {
   margin: 0 16px;
 }
-#footer > .container .col .footer__logo {
+#footer .footer__logo {
   width: 160px;
   filter: grayscale(1) brightness(0) invert(1);
 }
