--- a/src/css/pages/Home/Home.css
+++ b/src/css/pages/Home/Home.css
@@ -1,28 +1,28 @@
-#highlights,
-#featured,
-#discounted,
-#explore {
+#home main section {
   padding-top: 48px;
   padding-bottom: 48px;
 }
-#highlights .section__title,
-#featured .section__title,
-#discounted .section__title,
-#explore .section__title {
+#home main section .section__title {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 40px;
 }
+@media screen and (max-width: 768px) {
+  #home main section .section__title {
+    margin-bottom: 24px;
+  }
+}
 @media screen and (max-width: 576px) {
-  #highlights,
-  #featured,
-  #discounted,
-  #explore {
+  #home main section {
     padding-top: 32px;
     padding-bottom: 32px;
   }
 }
-
-#explore {
+#home main section#explore {
   padding-bottom: 96px;
+}
+@media screen and (max-width: 576px) {
+  #home main section#explore {
+    padding-bottom: 60px;
+  }
 }
