--- a/src/scss/pages/Home/Home.scss
+++ b/src/scss/pages/Home/Home.scss
@@ -1,7 +1,4 @@
-#highlights,
-#featured,
-#discounted,
-#explore {
+#home main section {
   padding-top: 48px;
   padding-bottom: 48px;
 
@@ -9,14 +6,22 @@
     font-size: 2rem;
     text-align: center;
     margin-bottom: 40px;
+
+    @media screen and (max-width: 768px) {
+      margin-bottom: 24px;
+    }
   }
 
   @media screen and (max-width: 576px) {
     padding-top: 32px;
     padding-bottom: 32px;
   }
-}
 
-#explore {
-  padding-bottom: 96px;
+  &#explore {
+    padding-bottom: 96px;
+
+    @media screen and (max-width: 576px) {
+      padding-bottom: 60px;
+    }
+  }
 }
