--- a/src/css/components/Book.css
+++ b/src/css/components/Book.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
 }
-.book__img--wrapper a, .book__img--wrapper img {
+.book__cover-img {
   display: block;
   height: 100%;
   width: 100%;
@@ -15,7 +15,7 @@
   object-position: left bottom;
   transition: transform 300ms ease;
 }
-.book__img--wrapper a:hover, .book__img--wrapper img:hover {
+.book__cover-img:hover {
   transform: scale(1.03);
 }
 .book__info {
@@ -84,7 +84,7 @@
   .book-skeleton__img {
     height: 55vw;
   }
-  .book img {
+  .book__cover-img {
     object-position: center bottom;
   }
   .book__info {
