--- a/src/scss/components/Book.scss
+++ b/src/scss/components/Book.scss
@@ -11,18 +11,16 @@
   display: flex;
   flex-direction: column;
 
-  &__img--wrapper {
-    a, img {
-      display: block;
-      height: 100%;
-      width: 100%;
-      object-fit: contain;
-      object-position: left bottom;
-      transition: transform 300ms ease;
+  &__cover-img {
+    display: block;
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+    object-position: left bottom;
+    transition: transform 300ms ease;
 
-      &:hover {
-        transform: scale(1.03);
-      }
+    &:hover {
+      transform: scale(1.03);
     }
   }
 
@@ -43,12 +41,10 @@
     margin-bottom: 8px;
   }
 
-  &__price {
-    &--strikethrough {
-      text-decoration: line-through;
-      color: #bfbfbf;
-      margin-right: 6px;
-    }
+  &__price--strikethrough {
+    text-decoration: line-through;
+    color: #bfbfbf;
+    margin-right: 6px;
   }
 }
 
@@ -104,7 +100,7 @@
   @include setBookImgHeight(55vw);
 
   .book {
-    img {
+    &__cover-img {
       object-position: center bottom;
     }
 
