--- a/src/scss/components/_NavMobile.scss
+++ b/src/scss/components/_NavMobile.scss
@@ -1,10 +1,8 @@
 @use '../variables';
 
-.modal-backdrop {
-  &:has(.nav-modal) {
-    justify-content: flex-end;
-    padding: 0;
-  }
+.modal-backdrop:has(.nav-modal) {
+  justify-content: flex-end;
+  padding: 0;
 }
 
 .nav-modal {
