--- a/src/scss/pages/BookInfo/BookInfo.scss
+++ b/src/scss/pages/BookInfo/BookInfo.scss
@@ -1,163 +1,3 @@
-// NAVIGATION HEADER
-
-#go-to-browse {
-  padding-bottom: 20px;
-  .home-links {
-    display: flex;
-    align-items: center;
-
-    .home-link {
-      font-size: 1.5rem;
-
-      &:first-child {
-        margin-right: 12px;
-      }
-    }
-  }
-}
-
-#active-book {
-  .book-selected {
-    display: flex;
-    align-items: flex-start;
-  }
-
-  img {
-    border-radius: 12px;
-    object-fit: contain;
-    width: calc(100% / 3);
-    min-width: 250px;
-  }
-
-  .mobile-img-wrapper {
-    display: none;
-  }
-
-  .info {
-    padding-left: 48px;
-    text-align: left;
-
-    .title {
-      font-size: 1.75rem;
-    }
-
-    .summary {
-      margin-top: 20px;
-
-      .title {
-        font-size: 20px;
-      }
-
-      .para {
-        margin-top: 12px;
-      }
-    }
-  }
-
-  .add-to-cart-btn {
-    transition: background-color 500ms ease;
-    transition-delay: 200ms;
-    margin-top: 20px;
-    position: relative;
-
-    &::after {
-      content: '';
-      font-size: 20px;
-      position: absolute;
-      right: -44px;
-      top: 50%;
-      opacity: 0;
-      transform: translateY(-40%);
-      transition: opacity 300ms ease-in-out, transform 200ms ease-in-out;
-      background-image: url('../../../assets/checkmark.png');
-      width: 32px;
-      height: 32px;
-      background-position: center center;
-      background-size: contain;
-    }
-
-    &.confirm-active {
-      background-color: #357266;
-      transition: background-color 300ms ease;
-
-      &::after {
-        opacity: 1;
-        transform: translateY(-50%);
-        transition: opacity 300ms ease-in-out, transform 200ms ease-in-out;
-        transition-delay: 100ms;
-      }
-    }
-  }
-
-  @media screen and (max-width: 768px) {
-    padding-bottom: 40px;
-
-    .book-selected .info {
-      padding-left: 24px;
-    }
-  }
-
-  @media screen and (max-width: 576px) {
-    .book-selected {
-      flex-direction: column;
-      align-items: center;
-      gap: 32px;
-
-      .info {
-        padding-left: 0;
-      }
-
-      .rating-and-price {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-
-      .desktop-img {
-        display: none;
-      }
-
-      .mobile-img-wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 20px;
-      }
-
-      .btn-wrapper {
-        &::after {
-          width: 28px;
-          height: 28px;
-        }
-        .btn {
-          padding: 8px 20px;
-        }
-      }
-    }
-  }
-}
-
-#recc-books {
-  padding-top: 48px;
-  padding-bottom: 60px;
-
-  .recc-books__header {
-    margin-bottom: 32px;
-    font-size: 2rem;
-    text-align: center;
-  }
-
-  @media screen and (max-width: 576px) {
-    padding-top: 24px;
-    
-    .recc-books__header {
-      margin-bottom: 24px;
-    }
-  }
-
-  @media screen and (max-width: 480px) {
-    .recc-books__header {
-      margin-bottom: 20px;
-    }
-  }
-}
+@use 'Header';
+@use 'Active';
+@use 'Recommended';
