--- a/src/scss/pages/BookInfo/_Header.scss
+++ b/src/scss/pages/BookInfo/_Header.scss
@@ -1,12 +1,12 @@
-#info header {
+.go-to-browse {
   padding-bottom: 20px;
 
-  .header-links {
+  &__link-wrapper {
     display: flex;
     align-items: center;
   }
 
-  .header-link {
+  &__link {
     font-size: 1.5rem;
 
     &:first-child {
